# liquidsystem

./: .gitignore  README.md  app.py  assessment.py  bypass.py  conversation.py  device_identifier.py  devices.json  main.py  notifier.py  pyproject.toml  recommender.py  report.py  runner.py  traffic.py
static/: index.html
templates/: report.html
